# django-tutorial

./: pyproject.toml
mysite/mysite/: settings.py
mysite/polls/: views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/templates/polls/: detail.html
