[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["Debashis Biswas <37234687+debashisbiswas@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "django_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
